# jasper

./: .gitignore  .sops.yaml  CLAUDE.md  Cargo.toml  EXTENSION_DEVELOPMENT.md  FILE_AUDIT.md  GNOME_EXTENSION_PRD.md  Makefile  PRD-Frontend-Architecture-Refactor.md  README-CACHIX.md  README.md  UBUNTU_MIGRATION.md  UPGRADE_TO_UNIFIED_PACKAGE.md  demo-multi-frontend.sh  dev-mode.sh  flake.nix  gnome-extension.nix  merge-waybar-config.py  merge-waybar-config.sh  module.nix  patch-live-config.sh  secrets.yaml  test-extension-manual.sh  test-gnome-formatting.sh  test-symlink-approach.sh  waybar-jasper.sh
.claude/: settings.json
.github/workflows/: cachix.yml  ci.yml  claude-code-review.yml  rust-ci.yml  rust.yml
cosmic-applet/: Cargo.toml
cosmic-applet/data/: com.system76.CosmicAppletJasper.desktop
cosmic-applet/src/: app.rs  config.rs  dbus_client.rs  main.rs
daemon/: Cargo.toml
daemon/src/: api_manager.rs  calendar_sync.rs  command_dispatcher.rs  config.rs  config_v2.rs  correlation_engine.rs  daemon_core.rs  data_sanitizer.rs  database.rs  dbus_service.rs  desktop_detection.rs  error_recovery.rs  errors.rs  frontend_framework.rs  frontend_manager.rs  google_calendar.rs  http_utils.rs  main.rs  new_daemon_core.rs  new_dbus_service.rs  noctalia_adapter.rs  significance_engine.rs  sops_integration.rs  test_calendar_integration.rs  test_data.rs  travel.rs  waybar_adapter.rs  waybar_formatter.rs
daemon/src/commands/: auth.rs  calendar.rs  daemon_ops.rs  mod.rs  waybar.rs
daemon/src/context_sources/: calendar.rs  mod.rs  obsidian.rs  tasks.rs  weather.rs
daemon/src/formatters/: gnome.rs  mod.rs  terminal.rs  waybar.rs
daemon/src/services/: calendar.rs  companion.rs  insight.rs  mod.rs  notification.rs
daemon/tests/: integration_tests.rs
daemon/tests.disabled/: dbus_integration.rs
docs/: COSMIC_INTEGRATION_PLAN.md  DESKTOP_DETECTION_DESIGN.md  DEVELOPMENT.md  EXTENSION_DEVELOPMENT.md  PRD-UNIFIED-PACKAGE.md  UBUNTU_SETUP.md  UNIFIED_PACKAGE_IMPLEMENTATION.md
docs/architecture/: EXTENSION_LESSONS_LEARNED.md
gnome-extension/: DEVELOPMENT_NOTES.md  NIXOS_COMPATIBILITY_REPORT.md  extension-minimal.js  extension.js  metadata.json
nix/: cosmic-applet.nix  module.nix  overlay.nix  unified-module.nix  unified-package.nix
noctalia-plugin/: BarWidget.qml  Main.qml  Panel.qml  manifest.json
scripts/: extension-dev.sh
tools/: dev-mode.sh  extension-dev.sh  quick-test.sh  test-simplified-architecture.sh  waybar-jasper.sh
tools/waybar/: config.json
ubuntu/: README.md  dev-helper.sh  install-deps.sh  jasper-companion.service.in  org.jasper.Daemon.service.in
waybar/: README.md  config.json  style.css
