[workspace]
members = [
    "daemon",
    "cosmic-applet",
]
resolver = "2"

[workspace.dependencies]
# Async runtime - only the features we actually use
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "time", "signal", "sync"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration and file watching
notify = "6.0"
dirs = "5.0"

# D-Bus
zbus = "4.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Crypto for secure storage
age = "0.10"

# OAuth2 for Google Calendar authentication
oauth2 = "4.4"

# Concurrency
parking_lot = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regular expressions
regex = "1.0"

# Hash functions
md5 = "0.7"

# Async traits
async-trait = "0.1"