[package]
name = "jasper-cosmic-applet"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "COSMIC panel applet for Jasper AI Companion"

[[bin]]
name = "jasper-cosmic-applet"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = [
    "applet",
    "applet-token",
    "dbus-config",
    "tokio",
    "wayland",
    "winit",
] }

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "time", "signal", "sync"] }
zbus = "4.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

# Standalone workspace (not part of root workspace)
[workspace]

[profile.release]
lto = "thin"
strip = true
