[package]
name = "jasper-companion-daemon"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "jasper-companion-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
notify = { workspace = true }
dirs = { workspace = true }
zbus = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.8"
age = { workspace = true }
oauth2 = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
md5 = { workspace = true }
urlencoding = "2.1"
async-trait = { workspace = true }